--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,4 @@
-@tailwind base;
+    @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
@@ -25,7 +25,7 @@ body {
  
 /* Track */
 ::-webkit-scrollbar-track {
-    background: #f1f1f1;
+    background: #f1f1f100;
 }
  
 /* Handle */
