--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -49,3 +49,13 @@ body {
     background-color: inherit;
     opacity: 0;
   }
+
+  input[type=number]::-webkit-inner-spin-button { 
+    -webkit-appearance: none;
+    
+}
+input[type=number] { 
+   -moz-appearance: textfield;
+   appearance: textfield;
+
+}
