--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,7 +5,7 @@
 @layer utilities {
     .efeito-vidro {
         background: rgba(255, 255, 255, 0.203);
-        box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+        /* box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37); */
         backdrop-filter: blur(13.5px);
         -webkit-backdrop-filter: blur(13.5px);
         border-radius: 10px;
