--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,71 +3,68 @@
 @tailwind utilities;
 
 @layer utilities {
-    .efeito-vidro {
-        background: rgba(255, 255, 255, 0.203);
-        /* box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37); */
-        backdrop-filter: blur(13.5px);
-        -webkit-backdrop-filter: blur(13.5px);
-        border-radius: 10px;
-        border: 1px solid rgba(255, 255, 255, 0.063);
-    }
+  .efeito-vidro {
+    background: rgba(255, 255, 255, 0.203);
+    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+    backdrop-filter: blur(13.5px);
+    -webkit-backdrop-filter: blur(13.5px);
+    border-radius: 10px;
+    border: 1px solid rgba(255, 255, 255, 0.063);
+  }
 }
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    scroll-behavior: smooth;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 html,
 body {
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    display: flex;
-    flex-direction: column;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
 }
 
 /* width */
 ::-webkit-scrollbar {
-    width: 8px;
+  width: 8px;
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
-    background: #f1f1f100;
+  background: #f1f1f100;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-    background: #888;
-    border-radius: 4px;
+  background: #888;
+  border-radius: 4px;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-    background: #555;
+  background: #555;
 }
 
 ::-ms-reveal {
-    display: none;
+  display: none;
 }
-
 
 [list]::-webkit-calendar-picker-indicator {
-    display: none;
-    background-color: inherit;
-    opacity: 0;
+  display: none;
+  background-color: inherit;
+  opacity: 0;
 }
 
-input[type=number]::-webkit-inner-spin-button {
-    -webkit-appearance: none;
-
+input[type="number"]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
 }
 
-input[type=number] {
-    -moz-appearance: textfield;
-    appearance: textfield;
-
+input[type="number"] {
+  -moz-appearance: textfield;
+  appearance: textfield;
 }
